syntax = "proto3";

package file;

option go_package = "./pb";

message ListFilesRequest {};
message ListFilesResponse {
  repeated string filenames = 1;
};

message DownloadRequest {
  string filename = 1;
};

message DownloadResponse {
  bytes data = 1;
};

message UploadRequest {
  bytes data = 1;
}

message UploadResponse {
  int32 size = 1;
}

message UploadAndNotifyProgressRequest {
  bytes data = 1;
}
message UploadAndNotifyProgressResponse {
  string msg = 1;
}

service FilesService {
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
  rpc Dowload (DownloadRequest) returns (stream DownloadResponse);
  rpc Upload (stream UploadRequest) returns (UploadResponse);
  rpc UploadAndNotifyProgress (stream UploadAndNotifyProgressRequest) returns (stream UploadAndNotifyProgressResponse);
};
